# LLMs-from-scratch-rs

./: Cargo.toml  Makefile  README.md
lib/data_loader/: Cargo.toml
lib/data_loader/src/: lib.rs
llm/: Cargo.toml
llm/src/: main.rs  vocab.rs
